Added Vundle to vim

--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -5,3 +5,7 @@
   [".local/bin/diffsofancy".filter]
     command = "ln"
     args = ["-s", "$HOME/.local/bin/diffsofancy/diff-so-fancy", "$HOME/.local/bin/diff-so-fancy"]
+
+[".vim/bundle/Vundle.vim"]
+  type = "git-repo"
+  url = "https://github.com/VundleVim/Vundle.vim.git"
